<resources>
    <string name="app_name">Terraria</string>
    <string name="percent">%</string>
    <string name="degrees">\u2103</string>
    <string name="seconds">seconden</string>
    <string name="minutes">minuten</string>
    <string name="btnSave">Opslaan</string>
    <string name="btnRefresh">Vernieuwen</string>
    <string name="mitConfig">Instellingen</string>
    <string name="mitState">Toestand apparaten</string>
    <string name="mitTimers">Tijdklokken</string>
    <string name="mitRuleset">Regelingen</string>
    <string name="mitHelp">Help</string>
    <string name="titleStateFragment">Huidge status van de apparaten</string>
    <string name="light1">Lamp 1</string>
    <string name="light2">Lamp 2</string>
    <string name="light3">Lamp 3</string>
    <string name="light4">Lamp 4</string>
    <string name="light5">Lamp 5</string>
    <string name="light6">Lamp 6</string>
    <string name="uvlight">UV Lamp</string>
    <string name="pump">Achterwand</string>
    <string name="sprayer">Sproeier</string>
    <string name="mist">Vernevelaar</string>
    <string name="fan_in">Ventilator In</string>
    <string name="fan_out">Ventilator Uit</string>
    <string name="on">aan</string>
    <string name="off">uit</string>
    <string name="lblOnOff">aan/uit</string>
    <string name="lblManual">handmatig</string>
    <string name="st_btnRefresh">Vernieuwen</string>
    <string name="st_tvwClock">Klok:</string>
    <string name="dlg_tvwClockTitle">Stel de datum en tijd handmatig in</string>
    <string name="dlg_tvwClock1">Geef datum als volgt op: dd/mm/yyyy hh:mm</string>
    <string name="dlg_tvwClock2">Bv. 02/04/2020 14:25 voor 2 April 2020</string>
    <string name="dlg_tvwResetHours1">Geef het totaal aantal branduren op</string>
    <string name="st_btnManual">Stel in</string>
    <string name="st_tvwTerrarium">Terrarium:</string>
    <string name="st_tvwRoom">Kamer:</string>
    <string name="st_tvwRules">Programma:</string>
    <string name="st_tvwBak1">Bak 1:</string>
    <string name="st_tvwBak2">Bak 2:</string>
    <string name="st_tvwStill">nog</string>
    <string name="st_tvwHours">branduren</string>
    <string name="it_tvwEvery">elke</string>
    <string name="it_tvwDay">dag(en)</string>
    <string name="it_tvwFor">gedurende</string>
    <string name="lblRuleset">Regeling</string>
    <string name="lblSprayingRules">Droogregeling</string>
    <string name="rs_tvwDryingPeriodsTitle">Droog blazen</string>
    <string name="rs_tvwStartAfter">Zet beide Ventilatoren aan</string>
    <string name="rs_tvwAfter">minuten nadat Sproeier uit is</string>
    <string name="rs_tvwPeriod1">en laat ze</string>
    <string name="rs_tvwPeriod2">draaien</string>
    <string name="rs_btnRefresh">Vernieuwen</string>
    <string name="rs_btnSave">Opslaan</string>
    <string name="rs_lblActive">Aktief</string>
    <string name="rs_lblFrom">van</string>
    <string name="rs_lblTo">tot</string>
    <string name="rs_lblIdeal">Gewenste temperatuur</string>
    <string name="rs_lblTemp">temperatuur</string>
    <string name="rs_lblTempRules">Temperatuur regels</string>
    <string name="rs_lblTempRuleText1">Als de temperatuur</string>
    <string name="rs_lblTempRuleText2a">boven</string>
    <string name="rs_lblTempRuleText2b">onder</string>
    <string name="rs_lblTempRuleText3">komt dan</string>
    <string name="rs_lblActionText1">zet</string>
    <string name="rs_lblActionText2">aan</string>
    <string name="rs_lblActionText3a">voor</string>
    <string name="rs_lblActionText3b">totdat de gewenste waarde bereikt is</string>
    <string name="rs_lblActionText4">en</string>
    <string name="titleDryingRule">Droog regeling</string>
    <string name="dr_lblActionText1">zet</string>
    <string name="dr_lblActionText2">aan voor</string>
    <string name="dr_lblDelay1">Wanneer</string>
    <string name="dr_lblDelay2">uitgezet wordt wacht dan</string>
    <string name="dr_lblDelay3">en dan</string>
    <string name="dr_lblAnd">en</string>
    <string name="lblSprayer">Sproeier</string>
    <string name="lblFanIn">Ventilator In</string>
    <string name="lblFanOut">Ventilator Uit</string>
</resources>