<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StateFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/colorAccent">

        <Button
            android:id="@+id/trm_refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/st_btnRefresh" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="-120dp"
            android:gravity="center"
            android:text="@string/mitState"
            android:textSize="24sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/st_tvwClock"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/trm_st_tvwDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="6 okt 2021 12:34"
            android:textSize="24sp" />

        <Button
            android:id="@+id/trm_st_btnClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/st_btnManual" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:text="@string/st_tvwTerrarium"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/trm_st_tvwTtemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="20"
            android:textSize="24sp" />

        <TextView
            android:layout_width="39dp"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:width="10dp"
            android:text="@string/degrees"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/st_tvwRoom"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/trm_st_tvwRtemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="18"
            android:textSize="24sp" />

        <TextView
            android:layout_width="39dp"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/degrees"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/trm_st_tvwRhum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="92"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/percent"
            android:textSize="24sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:text="@string/lblManual"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="165dp"
            android:text="@string/lblOnOff"
            android:textColor="#000000"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/trm_lay_device_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>


</LinearLayout>
