<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/trm_swManualDevice"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/trm_switchDevice"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/pump"
            android:textAlignment="textStart"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:textSize="24sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/trm_tvwDeviceState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:maxLength="40"
            android:text="totdat de gewenste waarde bereikt is"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trm_lay_uv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/trm_btnReset"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="90dp"
            android:text="reset"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/trm_tvwStill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/st_tvwStill"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/trm_tvwHours_lcc"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="number"
            android:text="4400"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/trm_tvwDevice_lcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/st_tvwHours"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:id="@+id/trm_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:background="?android:attr/listDivider" />

</LinearLayout>