<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/rs_btnRefresh"
                android:enabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/btnRefresh"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/rs_btnSave"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/btnSave"
                app:layout_constraintBottom_toBottomOf="@+id/rs_btnRefresh"
                app:layout_constraintStart_toEndOf="@+id/rs_btnRefresh"
                app:layout_constraintTop_toTopOf="@+id/rs_btnRefresh" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/rs_swActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:checked="false"
                android:fontFamily="sans-serif"
                android:text="@string/rs_lblActive"
                android:textAlignment="viewEnd"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/rs_lblFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:labelFor="@id/rs_edtFrom"
                android:text="@string/rs_lblFrom"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/rs_swActive"
                app:layout_constraintStart_toEndOf="@+id/rs_swActive"
                app:layout_constraintTop_toTopOf="@+id/rs_swActive" />

            <EditText
                android:id="@+id/rs_edtFrom"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:autofillHints="android:hint"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/rs_lblFrom"
                app:layout_constraintStart_toEndOf="@+id/rs_lblFrom"
                app:layout_constraintTop_toTopOf="@+id/rs_lblFrom" />

            <TextView
                android:id="@+id/rs_lblTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:labelFor="@id/rs_edtTo"
                android:text="@string/rs_lblTo"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/rs_lblFrom"
                app:layout_constraintStart_toEndOf="@+id/rs_edtFrom"
                app:layout_constraintTop_toTopOf="@+id/rs_lblFrom"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/rs_edtTo"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:autofillHints="android:hint"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/rs_lblTo"
                app:layout_constraintStart_toEndOf="@+id/rs_lblTo"
                app:layout_constraintTop_toTopOf="@+id/rs_lblTo" />

            <TextView
                android:id="@+id/rs_lblIdeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:labelFor="@id/rs_edtIdeal"
                android:text="@string/rs_lblIdeal"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/rs_edtFrom"
                app:layout_constraintStart_toEndOf="@+id/rs_edtTo"
                app:layout_constraintTop_toTopOf="@+id/rs_edtFrom"
                app:layout_constraintVertical_bias="0.476" />

            <EditText
                android:id="@+id/rs_edtIdeal"
                android:layout_width="39dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:autofillHints="android:hint"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/rs_edtTo"
                app:layout_constraintStart_toEndOf="@+id/rs_lblIdeal"
                app:layout_constraintTop_toTopOf="@+id/rs_edtTo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degrees"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/rs_lblIdeal"
                app:layout_constraintStart_toEndOf="@+id/rs_edtIdeal"
                app:layout_constraintTop_toTopOf="@+id/rs_lblIdeal"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            layout="@layout/rule_actions_frg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
